# FHE-zkVM-Demo

./: ARCHITECTURE_SUMMARY.md  COMBINED_REVIEW_ANALYSIS.md  FHE_VERIFICATION_PROPOSAL.md  FHE_VERIFICATION_RESEARCH_FOCUS.md  GEMINI_CODE_REVIEW.md  GEMINI_MULTI_KEY_FEEDBACK.md  HONEST_TECHNICAL_ASSESSMENT.md  IMPLEMENTATION_PLAN.md  LITEPAPER.md  MATHEMATICAL_PROOF.md  MATHEMATICAL_PROOF_COMPLETE.md  MULTI_KEY_ARCHITECTURE_PROPOSAL.md  O3_ARCHITECTURE_REVIEW.md  O3_FHE_VERIFICATION_REVIEW.md  O3_MULTI_KEY_REVIEW.md  O3_PRODUCTION_ROADMAP.md  O3_TRUSTLESS_CRITIQUE.md  PROOF_OF_CONCEPT.md  PROOF_OF_REAL_FHE.rs  PROOF_OF_REAL_FHE_SIMPLE.rs  README.md  REAL_FHE_ACHIEVEMENT.md  TRUSTLESS_FHE_PROPOSAL.md  challenger.rs  fhe_proof_protocol.rs  proof_test  repomix-output.txt  zkvm_fhe_proof.rs
host/: Cargo.toml
host/src/: fhe_client.rs  main.rs  types.rs
methods/guest/: Cargo.toml
methods/guest/src/: challenge_main.rs  main.rs  pure_rust_fhe.rs  types.rs
