[package]
name = "fhe_voting"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^2.1.0", default-features = false, features = ['std', 'getrandom'] }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rand_distr = "0.4"
thiserror = "1.0"
